Update lists at 20250911-1801

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -96,7 +96,6 @@ allow 109.71.252.182;
 allow 109.71.252.88;
 allow 109.71.252.97;
 allow 114.35.245.150;
-allow 118.141.232.158;
 allow 118.163.74.160;
 allow 121.78.28.166;
 allow 123.253.35.32;
@@ -130,7 +129,6 @@ allow 149.102.153.38;
 allow 149.202.79.101;
 allow 149.202.79.129;
 allow 149.56.44.47;
-allow 150.129.10.139;
 allow 152.32.206.127;
 allow 152.53.106.19;
 allow 152.53.184.161;
@@ -616,7 +614,7 @@ allow 195.80.151.242;
 allow 195.88.74.206;
 allow 196.196.200.100;
 allow 196.251.84.71;
-allow 198.167.206.143;
+allow 198.167.206.162;
 allow 198.251.84.163;
 allow 198.251.84.237;
 allow 198.251.88.18;
@@ -922,12 +920,12 @@ allow 23.191.200.24;
 allow 23.191.200.25;
 allow 23.191.200.26;
 allow 23.191.200.27;
+allow 23.191.200.28;
 allow 23.191.200.29;
-allow 23.191.200.3;
 allow 23.191.200.30;
 allow 23.191.200.31;
 allow 23.191.200.4;
-allow 23.191.200.5;
+allow 23.191.200.6;
 allow 23.191.200.7;
 allow 23.191.200.8;
 allow 23.191.200.9;
@@ -1245,7 +1243,6 @@ allow 2a04:52c0:123:5ccf:50ef:cafe:babe:1337;
 allow 2a04:52c0:123:c6c3::1;
 allow 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
 allow 2a04:52c0:130:896e::1;
-allow 2a04:52c0:139:f7a5::1;
 allow 2a04:9dc0:31::c0cc:4d;
 allow 2a05:541:110:20::1;
 allow 2a05:541:110:3e::1;
@@ -1499,6 +1496,8 @@ allow 2a0f:85c1:356:231b::1;
 allow 2a0f:85c1:356:3238::1;
 allow 2a0f:85c1:356:5c50::1;
 allow 2a0f:9400:7e11:887f::1;
+allow 2a0f:ca80:619:c3b8::1;
+allow 2a0f:ca80:619:e915::1;
 allow 2a0f:cdc6:500:11e3::2;
 allow 2a0f:df00:0:255::194;
 allow 2a0f:df00:0:255::195;
@@ -1634,6 +1633,8 @@ allow 43.160.194.14;
 allow 45.11.59.28;
 allow 45.12.3.80;
 allow 45.128.133.242;
+allow 45.129.13.52;
+allow 45.129.13.57;
 allow 45.132.246.245;
 allow 45.13.225.69;
 allow 45.13.225.78;
@@ -1848,8 +1849,6 @@ allow 87.118.122.51;
 allow 87.120.222.33;
 allow 87.120.254.132;
 allow 87.121.79.9;
-allow 87.121.84.116;
-allow 87.121.84.129;
 allow 88.151.192.2;
 allow 88.151.194.24;
 allow 88.80.20.86;
