--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -96,6 +96,7 @@ allow 109.71.252.182;
 allow 109.71.252.88;
 allow 109.71.252.97;
 allow 114.35.245.150;
+allow 118.141.232.158;
 allow 118.163.74.160;
 allow 121.78.28.166;
 allow 123.253.35.32;
@@ -219,7 +220,7 @@ allow 178.218.144.51;
 allow 178.218.144.64;
 allow 178.218.144.96;
 allow 178.218.144.99;
-allow 178.30.84.201;
+allow 178.30.241.247;
 allow 179.250.80.161;
 allow 179.43.128.16;
 allow 179.43.159.194;
@@ -922,9 +923,11 @@ allow 23.191.200.26;
 allow 23.191.200.27;
 allow 23.191.200.28;
 allow 23.191.200.29;
+allow 23.191.200.3;
 allow 23.191.200.30;
 allow 23.191.200.31;
 allow 23.191.200.4;
+allow 23.191.200.5;
 allow 23.191.200.6;
 allow 23.191.200.7;
 allow 23.191.200.8;
@@ -1053,7 +1056,6 @@ allow 2605:e440:3::3ef;
 allow 2607:5300:201:3100::35c5;
 allow 2607:5300:205:200::4894;
 allow 2607:f530:9002::19;
-allow 2607:fa18:3:beef:f001:c0de:feed:ba5e;
 allow 2610:150:4001:a120:216:3cff:fe4a:e2a9;
 allow 2620:18c:0:192::99;
 allow 2620:18c:0:192::e0:130;
@@ -1512,7 +1514,6 @@ allow 2a0f:df00:0:255::203;
 allow 2a0f:df00:0:255::204;
 allow 2a0f:df00:0:255::205;
 allow 2a0f:df00:0:255::206;
-allow 2a10:2f00:167::1;
 allow 2a10:8a40:f313::29;
 allow 2a10:c800:1:9cc6::1;
 allow 2a11:6100:0:12:a236:9fff:fe9e:36ea;
@@ -1589,6 +1590,7 @@ allow 2a12:a800:9:1:45:88:186:89;
 allow 2a12:a800:9:1:45:88:186:92;
 allow 2a12:de40:21:1be4::;
 allow 2a14:1ec7:1000:a633::1;
+allow 2a14:7583:f607::;
 allow 2c0f:6c0:0:2::6983;
 allow 2c0f:6c0:0:d::d28b;
 allow 31.129.22.65;
@@ -1630,6 +1632,7 @@ allow 38.97.116.243;
 allow 38.97.116.244;
 allow 38.97.116.245;
 allow 43.160.194.14;
+allow 44.30.4.69;
 allow 45.11.59.28;
 allow 45.12.3.80;
 allow 45.128.133.242;
@@ -1835,7 +1838,6 @@ allow 84.16.224.227;
 allow 84.19.182.20;
 allow 84.211.224.201;
 allow 84.239.46.144;
-allow 85.202.203.1;
 allow 85.239.41.130;
 allow 85.93.218.204;
 allow 85.93.31.31;
