--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -96,6 +96,7 @@ set_real_ip_from 109.71.252.182;
 set_real_ip_from 109.71.252.88;
 set_real_ip_from 109.71.252.97;
 set_real_ip_from 114.35.245.150;
+set_real_ip_from 118.141.232.158;
 set_real_ip_from 118.163.74.160;
 set_real_ip_from 121.78.28.166;
 set_real_ip_from 123.253.35.32;
@@ -219,7 +220,7 @@ set_real_ip_from 178.218.144.51;
 set_real_ip_from 178.218.144.64;
 set_real_ip_from 178.218.144.96;
 set_real_ip_from 178.218.144.99;
-set_real_ip_from 178.30.84.201;
+set_real_ip_from 178.30.241.247;
 set_real_ip_from 179.250.80.161;
 set_real_ip_from 179.43.128.16;
 set_real_ip_from 179.43.159.194;
@@ -922,9 +923,11 @@ set_real_ip_from 23.191.200.26;
 set_real_ip_from 23.191.200.27;
 set_real_ip_from 23.191.200.28;
 set_real_ip_from 23.191.200.29;
+set_real_ip_from 23.191.200.3;
 set_real_ip_from 23.191.200.30;
 set_real_ip_from 23.191.200.31;
 set_real_ip_from 23.191.200.4;
+set_real_ip_from 23.191.200.5;
 set_real_ip_from 23.191.200.6;
 set_real_ip_from 23.191.200.7;
 set_real_ip_from 23.191.200.8;
@@ -1053,7 +1056,6 @@ set_real_ip_from 2605:e440:3::3ef;
 set_real_ip_from 2607:5300:201:3100::35c5;
 set_real_ip_from 2607:5300:205:200::4894;
 set_real_ip_from 2607:f530:9002::19;
-set_real_ip_from 2607:fa18:3:beef:f001:c0de:feed:ba5e;
 set_real_ip_from 2610:150:4001:a120:216:3cff:fe4a:e2a9;
 set_real_ip_from 2620:18c:0:192::99;
 set_real_ip_from 2620:18c:0:192::e0:130;
@@ -1512,7 +1514,6 @@ set_real_ip_from 2a0f:df00:0:255::203;
 set_real_ip_from 2a0f:df00:0:255::204;
 set_real_ip_from 2a0f:df00:0:255::205;
 set_real_ip_from 2a0f:df00:0:255::206;
-set_real_ip_from 2a10:2f00:167::1;
 set_real_ip_from 2a10:8a40:f313::29;
 set_real_ip_from 2a10:c800:1:9cc6::1;
 set_real_ip_from 2a11:6100:0:12:a236:9fff:fe9e:36ea;
@@ -1589,6 +1590,7 @@ set_real_ip_from 2a12:a800:9:1:45:88:186:89;
 set_real_ip_from 2a12:a800:9:1:45:88:186:92;
 set_real_ip_from 2a12:de40:21:1be4::;
 set_real_ip_from 2a14:1ec7:1000:a633::1;
+set_real_ip_from 2a14:7583:f607::;
 set_real_ip_from 2c0f:6c0:0:2::6983;
 set_real_ip_from 2c0f:6c0:0:d::d28b;
 set_real_ip_from 31.129.22.65;
@@ -1630,6 +1632,7 @@ set_real_ip_from 38.97.116.243;
 set_real_ip_from 38.97.116.244;
 set_real_ip_from 38.97.116.245;
 set_real_ip_from 43.160.194.14;
+set_real_ip_from 44.30.4.69;
 set_real_ip_from 45.11.59.28;
 set_real_ip_from 45.12.3.80;
 set_real_ip_from 45.128.133.242;
@@ -1835,7 +1838,6 @@ set_real_ip_from 84.16.224.227;
 set_real_ip_from 84.19.182.20;
 set_real_ip_from 84.211.224.201;
 set_real_ip_from 84.239.46.144;
-set_real_ip_from 85.202.203.1;
 set_real_ip_from 85.239.41.130;
 set_real_ip_from 85.93.218.204;
 set_real_ip_from 85.93.31.31;
