--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -399,6 +399,7 @@ deny 2a04:52c0:103:5acd::1;
 deny 2a04:52c0:104:31e6::1;
 deny 2a04:52c0:104:4735::1;
 deny 2a04:52c0:104:ad97::1;
+deny 2a04:52c0:105:d7eb::1;
 deny 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 deny 2a04:52c0:106:d219::1;
 deny 2a04:52c0:108:a34f::1;
@@ -752,6 +753,9 @@ deny 2a12:a800:9:1:193:26:115:82;
 deny 2a12:a800:9:1:45:83:31:79;
 deny 2a12:a800:9:1:45:88:186:89;
 deny 2a12:a800:9:1:45:88:186:92;
+deny 2a12:bec4:1821:3a6::a;
+deny 2a12:bec4:1821:3a7::a;
+deny 2a12:bec4:1821:3a8::a;
 deny 2a12:de40:21:1be4::;
 deny 2a14:1ec7:1000:a633::1;
 deny 2a14:7583:f607::;
