--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -14,6 +14,9 @@ set_real_ip_from 103.253.24.18;
 set_real_ip_from 103.28.52.93;
 set_real_ip_from 103.91.65.44;
 set_real_ip_from 104.167.241.4;
+set_real_ip_from 104.167.242.116;
+set_real_ip_from 104.167.242.117;
+set_real_ip_from 104.167.242.118;
 set_real_ip_from 104.192.3.74;
 set_real_ip_from 104.219.236.100;
 set_real_ip_from 104.244.72.115;
@@ -129,6 +132,7 @@ set_real_ip_from 149.102.153.38;
 set_real_ip_from 149.202.79.101;
 set_real_ip_from 149.202.79.129;
 set_real_ip_from 149.56.44.47;
+set_real_ip_from 151.243.213.150;
 set_real_ip_from 152.32.206.127;
 set_real_ip_from 152.53.106.19;
 set_real_ip_from 152.53.184.161;
@@ -911,7 +915,6 @@ set_real_ip_from 23.191.200.16;
 set_real_ip_from 23.191.200.17;
 set_real_ip_from 23.191.200.18;
 set_real_ip_from 23.191.200.19;
-set_real_ip_from 23.191.200.2;
 set_real_ip_from 23.191.200.20;
 set_real_ip_from 23.191.200.21;
 set_real_ip_from 23.191.200.22;
@@ -920,8 +923,8 @@ set_real_ip_from 23.191.200.24;
 set_real_ip_from 23.191.200.25;
 set_real_ip_from 23.191.200.26;
 set_real_ip_from 23.191.200.27;
-set_real_ip_from 23.191.200.28;
 set_real_ip_from 23.191.200.29;
+set_real_ip_from 23.191.200.3;
 set_real_ip_from 23.191.200.30;
 set_real_ip_from 23.191.200.31;
 set_real_ip_from 23.191.200.4;
@@ -1233,6 +1236,7 @@ set_real_ip_from 2a04:52c0:103:5acd::1;
 set_real_ip_from 2a04:52c0:104:31e6::1;
 set_real_ip_from 2a04:52c0:104:4735::1;
 set_real_ip_from 2a04:52c0:104:ad97::1;
+set_real_ip_from 2a04:52c0:105:d7eb::1;
 set_real_ip_from 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 set_real_ip_from 2a04:52c0:106:d219::1;
 set_real_ip_from 2a04:52c0:108:a34f::1;
@@ -1586,6 +1590,9 @@ set_real_ip_from 2a12:a800:9:1:193:26:115:82;
 set_real_ip_from 2a12:a800:9:1:45:83:31:79;
 set_real_ip_from 2a12:a800:9:1:45:88:186:89;
 set_real_ip_from 2a12:a800:9:1:45:88:186:92;
+set_real_ip_from 2a12:bec4:1821:3a6::a;
+set_real_ip_from 2a12:bec4:1821:3a7::a;
+set_real_ip_from 2a12:bec4:1821:3a8::a;
 set_real_ip_from 2a12:de40:21:1be4::;
 set_real_ip_from 2a14:1ec7:1000:a633::1;
 set_real_ip_from 2a14:7583:f607::;
@@ -1595,6 +1602,7 @@ set_real_ip_from 31.129.22.65;
 set_real_ip_from 31.133.0.210;
 set_real_ip_from 31.133.0.235;
 set_real_ip_from 31.184.236.104;
+set_real_ip_from 31.220.75.237;
 set_real_ip_from 31.40.204.206;
 set_real_ip_from 31.44.238.25;
 set_real_ip_from 35.0.127.52;
@@ -1623,7 +1631,6 @@ set_real_ip_from 38.135.25.142;
 set_real_ip_from 38.135.25.143;
 set_real_ip_from 38.135.25.144;
 set_real_ip_from 38.135.25.2;
-set_real_ip_from 38.242.254.131;
 set_real_ip_from 38.60.250.79;
 set_real_ip_from 38.97.116.242;
 set_real_ip_from 38.97.116.243;
@@ -1740,11 +1747,14 @@ set_real_ip_from 51.15.59.15;
 set_real_ip_from 51.161.198.74;
 set_real_ip_from 51.222.142.67;
 set_real_ip_from 51.38.225.46;
+set_real_ip_from 5.181.177.130;
+set_real_ip_from 5.181.177.245;
 set_real_ip_from 51.81.222.62;
 set_real_ip_from 51.89.138.51;
 set_real_ip_from 51.91.18.151;
 set_real_ip_from 5.196.95.34;
 set_real_ip_from 5.253.247.27;
+set_real_ip_from 5.255.100.26;
 set_real_ip_from 5.255.101.10;
 set_real_ip_from 5.255.101.131;
 set_real_ip_from 5.255.103.235;
@@ -1808,6 +1818,7 @@ set_real_ip_from 77.72.85.206;
 set_real_ip_from 77.81.247.72;
 set_real_ip_from 78.142.18.219;
 set_real_ip_from 78.153.150.25;
+set_real_ip_from 79.100.12.71;
 set_real_ip_from 80.241.60.207;
 set_real_ip_from 80.253.251.56;
 set_real_ip_from 80.67.167.81;
