Update lists at 20250912-1201

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -113,7 +113,6 @@ allow 125.212.241.131;
 allow 125.253.56.119;
 allow 128.127.180.156;
 allow 128.31.0.13;
-allow 130.193.10.21;
 allow 130.193.15.186;
 allow 131.72.79.38;
 allow 135.125.239.70;
@@ -135,6 +134,7 @@ allow 151.243.213.150;
 allow 152.32.206.127;
 allow 152.53.106.19;
 allow 152.53.184.161;
+allow 152.53.210.165;
 allow 152.53.53.243;
 allow 154.16.116.61;
 allow 154.205.129.174;
@@ -189,7 +189,6 @@ allow 173.0.3.111;
 allow 173.237.206.68;
 allow 173.255.198.243;
 allow 176.118.193.33;
-allow 176.121.81.51;
 allow 176.58.100.98;
 allow 176.58.121.177;
 allow 176.58.89.182;
@@ -922,10 +921,11 @@ allow 23.191.200.23;
 allow 23.191.200.24;
 allow 23.191.200.25;
 allow 23.191.200.26;
-allow 23.191.200.3;
+allow 23.191.200.27;
+allow 23.191.200.29;
 allow 23.191.200.30;
+allow 23.191.200.31;
 allow 23.191.200.4;
-allow 23.191.200.5;
 allow 23.191.200.6;
 allow 23.191.200.7;
 allow 23.191.200.8;
@@ -1279,6 +1279,7 @@ allow 2a09:61c0::20;
 allow 2a09:61c0::21;
 allow 2a09:61c0::22;
 allow 2a09:61c0::beef;
+allow 2a0a:4cc0:2000:cd4c::12;
 allow 2a0a:4cc0:40:91b:7425:2eff:fec8:5578;
 allow 2a0a:4cc0:c1:12a1:58f9:e7ff:fe0b:b0f1;
 allow 2a0b:f4c0:16c:10::1;
