Update lists at 20250913-0301

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -14,7 +14,6 @@ allow 103.253.24.18;
 allow 103.28.52.93;
 allow 103.91.65.44;
 allow 104.167.241.4;
-allow 104.167.242.116;
 allow 104.167.242.117;
 allow 104.167.242.118;
 allow 104.192.3.74;
@@ -114,6 +113,7 @@ allow 125.212.241.131;
 allow 125.253.56.119;
 allow 128.127.180.156;
 allow 128.31.0.13;
+allow 130.193.10.21;
 allow 130.193.15.186;
 allow 131.72.79.38;
 allow 135.125.239.70;
@@ -479,10 +479,12 @@ allow 185.35.202.222;
 allow 185.40.4.100;
 allow 185.40.4.101;
 allow 185.40.4.121;
+allow 185.40.4.127;
 allow 185.40.4.132;
 allow 185.40.4.143;
 allow 185.40.4.149;
 allow 185.40.4.150;
+allow 185.40.4.20;
 allow 185.40.4.22;
 allow 185.40.4.29;
 allow 185.40.4.38;
@@ -917,13 +919,14 @@ allow 23.191.200.23;
 allow 23.191.200.24;
 allow 23.191.200.25;
 allow 23.191.200.26;
-allow 23.191.200.27;
 allow 23.191.200.28;
 allow 23.191.200.29;
 allow 23.191.200.3;
 allow 23.191.200.30;
+allow 23.191.200.31;
 allow 23.191.200.4;
 allow 23.191.200.5;
+allow 23.191.200.6;
 allow 23.191.200.7;
 allow 23.191.200.8;
 allow 23.191.200.9;
@@ -1231,6 +1234,7 @@ allow 2a04:52c0:103:5acd::1;
 allow 2a04:52c0:104:31e6::1;
 allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
+allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 allow 2a04:52c0:106:d219::1;
 allow 2a04:52c0:108:a34f::1;
@@ -1460,6 +1464,7 @@ allow 2a0d:c2c0:1:4::2;
 allow 2a0e:1d80:13:b6d5::1;
 allow 2a0e:4005:1002:ffff:185:40:4:100;
 allow 2a0e:4005:1002:ffff:185:40:4:101;
+allow 2a0e:4005:1002:ffff:185:40:4:127;
 allow 2a0e:4005:1002:ffff:185:40:4:132;
 allow 2a0e:4005:1002:ffff:185:40:4:143;
 allow 2a0e:4005:1002:ffff:185:40:4:149;
@@ -1493,7 +1498,6 @@ allow 2a0e:fa00:0:30::1;
 allow 2a0f:85c1:356:231b::1;
 allow 2a0f:85c1:356:3238::1;
 allow 2a0f:85c1:356:5c50::1;
-allow 2a0f:9400:7e11:887f::1;
 allow 2a0f:ca80:619:c3b8::1;
 allow 2a0f:ca80:619:e915::1;
 allow 2a0f:cdc6:500:11e3::2;
@@ -1595,7 +1599,6 @@ allow 31.129.22.65;
 allow 31.133.0.210;
 allow 31.133.0.235;
 allow 31.184.236.104;
-allow 31.220.75.237;
 allow 31.40.204.206;
 allow 31.44.238.25;
 allow 35.0.127.52;
@@ -1624,6 +1627,7 @@ allow 38.135.25.142;
 allow 38.135.25.143;
 allow 38.135.25.144;
 allow 38.135.25.2;
+allow 38.242.254.131;
 allow 38.60.250.79;
 allow 38.97.116.242;
 allow 38.97.116.243;
@@ -1746,6 +1750,7 @@ allow 51.89.138.51;
 allow 51.91.18.151;
 allow 5.196.95.34;
 allow 5.253.247.27;
+allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.103.235;
@@ -1862,7 +1867,6 @@ allow 89.147.110.118;
 allow 89.147.110.154;
 allow 89.147.110.82;
 allow 89.147.111.87;
-allow 89.213.174.206;
 allow 89.234.157.254;
 allow 89.58.26.216;
 allow 89.58.41.156;
