--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -14,7 +14,6 @@ set_real_ip_from 103.253.24.18;
 set_real_ip_from 103.28.52.93;
 set_real_ip_from 103.91.65.44;
 set_real_ip_from 104.167.241.4;
-set_real_ip_from 104.167.242.116;
 set_real_ip_from 104.167.242.117;
 set_real_ip_from 104.167.242.118;
 set_real_ip_from 104.192.3.74;
@@ -114,6 +113,7 @@ set_real_ip_from 125.212.241.131;
 set_real_ip_from 125.253.56.119;
 set_real_ip_from 128.127.180.156;
 set_real_ip_from 128.31.0.13;
+set_real_ip_from 130.193.10.21;
 set_real_ip_from 130.193.15.186;
 set_real_ip_from 131.72.79.38;
 set_real_ip_from 135.125.239.70;
@@ -479,10 +479,12 @@ set_real_ip_from 185.35.202.222;
 set_real_ip_from 185.40.4.100;
 set_real_ip_from 185.40.4.101;
 set_real_ip_from 185.40.4.121;
+set_real_ip_from 185.40.4.127;
 set_real_ip_from 185.40.4.132;
 set_real_ip_from 185.40.4.143;
 set_real_ip_from 185.40.4.149;
 set_real_ip_from 185.40.4.150;
+set_real_ip_from 185.40.4.20;
 set_real_ip_from 185.40.4.22;
 set_real_ip_from 185.40.4.29;
 set_real_ip_from 185.40.4.38;
@@ -917,13 +919,14 @@ set_real_ip_from 23.191.200.23;
 set_real_ip_from 23.191.200.24;
 set_real_ip_from 23.191.200.25;
 set_real_ip_from 23.191.200.26;
-set_real_ip_from 23.191.200.27;
 set_real_ip_from 23.191.200.28;
 set_real_ip_from 23.191.200.29;
 set_real_ip_from 23.191.200.3;
 set_real_ip_from 23.191.200.30;
+set_real_ip_from 23.191.200.31;
 set_real_ip_from 23.191.200.4;
 set_real_ip_from 23.191.200.5;
+set_real_ip_from 23.191.200.6;
 set_real_ip_from 23.191.200.7;
 set_real_ip_from 23.191.200.8;
 set_real_ip_from 23.191.200.9;
@@ -1231,6 +1234,7 @@ set_real_ip_from 2a04:52c0:103:5acd::1;
 set_real_ip_from 2a04:52c0:104:31e6::1;
 set_real_ip_from 2a04:52c0:104:4735::1;
 set_real_ip_from 2a04:52c0:104:ad97::1;
+set_real_ip_from 2a04:52c0:105:d7eb::1;
 set_real_ip_from 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 set_real_ip_from 2a04:52c0:106:d219::1;
 set_real_ip_from 2a04:52c0:108:a34f::1;
@@ -1460,6 +1464,7 @@ set_real_ip_from 2a0d:c2c0:1:4::2;
 set_real_ip_from 2a0e:1d80:13:b6d5::1;
 set_real_ip_from 2a0e:4005:1002:ffff:185:40:4:100;
 set_real_ip_from 2a0e:4005:1002:ffff:185:40:4:101;
+set_real_ip_from 2a0e:4005:1002:ffff:185:40:4:127;
 set_real_ip_from 2a0e:4005:1002:ffff:185:40:4:132;
 set_real_ip_from 2a0e:4005:1002:ffff:185:40:4:143;
 set_real_ip_from 2a0e:4005:1002:ffff:185:40:4:149;
@@ -1493,7 +1498,6 @@ set_real_ip_from 2a0e:fa00:0:30::1;
 set_real_ip_from 2a0f:85c1:356:231b::1;
 set_real_ip_from 2a0f:85c1:356:3238::1;
 set_real_ip_from 2a0f:85c1:356:5c50::1;
-set_real_ip_from 2a0f:9400:7e11:887f::1;
 set_real_ip_from 2a0f:ca80:619:c3b8::1;
 set_real_ip_from 2a0f:ca80:619:e915::1;
 set_real_ip_from 2a0f:cdc6:500:11e3::2;
@@ -1595,7 +1599,6 @@ set_real_ip_from 31.129.22.65;
 set_real_ip_from 31.133.0.210;
 set_real_ip_from 31.133.0.235;
 set_real_ip_from 31.184.236.104;
-set_real_ip_from 31.220.75.237;
 set_real_ip_from 31.40.204.206;
 set_real_ip_from 31.44.238.25;
 set_real_ip_from 35.0.127.52;
@@ -1624,6 +1627,7 @@ set_real_ip_from 38.135.25.142;
 set_real_ip_from 38.135.25.143;
 set_real_ip_from 38.135.25.144;
 set_real_ip_from 38.135.25.2;
+set_real_ip_from 38.242.254.131;
 set_real_ip_from 38.60.250.79;
 set_real_ip_from 38.97.116.242;
 set_real_ip_from 38.97.116.243;
@@ -1746,6 +1750,7 @@ set_real_ip_from 51.89.138.51;
 set_real_ip_from 51.91.18.151;
 set_real_ip_from 5.196.95.34;
 set_real_ip_from 5.253.247.27;
+set_real_ip_from 5.255.100.26;
 set_real_ip_from 5.255.101.10;
 set_real_ip_from 5.255.101.131;
 set_real_ip_from 5.255.103.235;
@@ -1862,7 +1867,6 @@ set_real_ip_from 89.147.110.118;
 set_real_ip_from 89.147.110.154;
 set_real_ip_from 89.147.110.82;
 set_real_ip_from 89.147.111.87;
-set_real_ip_from 89.213.174.206;
 set_real_ip_from 89.234.157.254;
 set_real_ip_from 89.58.26.216;
 set_real_ip_from 89.58.41.156;
