--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -38,6 +38,7 @@ set_real_ip_from 104.244.79.50;
 set_real_ip_from 104.244.79.61;
 set_real_ip_from 104.254.90.195;
 set_real_ip_from 104.36.80.7;
+set_real_ip_from 107.172.61.206;
 set_real_ip_from 107.173.187.181;
 set_real_ip_from 107.174.146.25;
 set_real_ip_from 107.174.241.162;
@@ -112,6 +113,7 @@ set_real_ip_from 124.198.131.62;
 set_real_ip_from 124.198.132.13;
 set_real_ip_from 124.198.132.172;
 set_real_ip_from 124.198.132.237;
+set_real_ip_from 124.198.132.52;
 set_real_ip_from 125.212.241.131;
 set_real_ip_from 125.253.56.119;
 set_real_ip_from 128.127.180.156;
@@ -913,6 +915,7 @@ set_real_ip_from 23.191.200.16;
 set_real_ip_from 23.191.200.17;
 set_real_ip_from 23.191.200.18;
 set_real_ip_from 23.191.200.19;
+set_real_ip_from 23.191.200.2;
 set_real_ip_from 23.191.200.20;
 set_real_ip_from 23.191.200.21;
 set_real_ip_from 23.191.200.22;
@@ -921,10 +924,12 @@ set_real_ip_from 23.191.200.24;
 set_real_ip_from 23.191.200.25;
 set_real_ip_from 23.191.200.26;
 set_real_ip_from 23.191.200.27;
+set_real_ip_from 23.191.200.29;
 set_real_ip_from 23.191.200.3;
 set_real_ip_from 23.191.200.30;
 set_real_ip_from 23.191.200.31;
 set_real_ip_from 23.191.200.4;
+set_real_ip_from 23.191.200.5;
 set_real_ip_from 23.191.200.6;
 set_real_ip_from 23.191.200.7;
 set_real_ip_from 23.191.200.8;
@@ -1522,6 +1527,7 @@ set_real_ip_from 2a12:a800:11:1:124:198:131:62;
 set_real_ip_from 2a12:a800:11:1:124:198:132:13;
 set_real_ip_from 2a12:a800:11:1:124:198:132:172;
 set_real_ip_from 2a12:a800:11:1:124:198:132:237;
+set_real_ip_from 2a12:a800:11:1:124:198:132:52;
 set_real_ip_from 2a12:a800:11:1:192:159:99:168;
 set_real_ip_from 2a12:a800:11:1:192:159:99:74;
 set_real_ip_from 2a12:a800:1:1:194:26:192:177;
@@ -1782,7 +1788,6 @@ set_real_ip_from 5.45.98.162;
 set_real_ip_from 57.128.212.103;
 set_real_ip_from 57.128.220.107;
 set_real_ip_from 57.129.91.235;
-set_real_ip_from 5.79.66.19;
 set_real_ip_from 62.133.45.2;
 set_real_ip_from 62.171.137.169;
 set_real_ip_from 62.182.84.146;
@@ -1811,6 +1816,7 @@ set_real_ip_from 77.48.28.239;
 set_real_ip_from 77.81.247.72;
 set_real_ip_from 78.142.18.219;
 set_real_ip_from 78.153.150.25;
+set_real_ip_from 78.159.131.103;
 set_real_ip_from 79.100.12.71;
 set_real_ip_from 80.241.60.207;
 set_real_ip_from 80.253.251.56;
