--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -41,7 +41,6 @@ set_real_ip_from 104.36.80.7;
 set_real_ip_from 107.172.61.206;
 set_real_ip_from 107.173.187.181;
 set_real_ip_from 107.174.146.25;
-set_real_ip_from 107.174.241.162;
 set_real_ip_from 107.175.93.157;
 set_real_ip_from 107.189.10.175;
 set_real_ip_from 107.189.11.111;
@@ -129,6 +128,7 @@ set_real_ip_from 139.99.8.57;
 set_real_ip_from 141.98.11.62;
 set_real_ip_from 143.20.64.235;
 set_real_ip_from 144.126.133.74;
+set_real_ip_from 146.103.43.17;
 set_real_ip_from 146.59.126.232;
 set_real_ip_from 146.59.231.4;
 set_real_ip_from 149.102.153.38;
@@ -665,6 +665,7 @@ set_real_ip_from 2001:41d0:801:2000::2b97;
 set_real_ip_from 2001:41d0:805:d300::2b19:1929;
 set_real_ip_from 2001:41d0:a:5c0::1;
 set_real_ip_from 2001:41d0:a:fe22::1;
+set_real_ip_from 2001:41d0:f00:5600::5ad6:7567;
 set_real_ip_from 2001:470:1:908::9001;
 set_real_ip_from 2001:470:1f06:2b4::2;
 set_real_ip_from 2001:4b20:12:f001::105;
@@ -808,7 +809,6 @@ set_real_ip_from 23.129.64.135;
 set_real_ip_from 23.129.64.136;
 set_real_ip_from 23.129.64.137;
 set_real_ip_from 23.129.64.138;
-set_real_ip_from 23.129.64.139;
 set_real_ip_from 23.129.64.140;
 set_real_ip_from 23.129.64.141;
 set_real_ip_from 23.129.64.142;
@@ -915,7 +915,6 @@ set_real_ip_from 23.191.200.16;
 set_real_ip_from 23.191.200.17;
 set_real_ip_from 23.191.200.18;
 set_real_ip_from 23.191.200.19;
-set_real_ip_from 23.191.200.2;
 set_real_ip_from 23.191.200.20;
 set_real_ip_from 23.191.200.21;
 set_real_ip_from 23.191.200.22;
@@ -924,7 +923,6 @@ set_real_ip_from 23.191.200.24;
 set_real_ip_from 23.191.200.25;
 set_real_ip_from 23.191.200.26;
 set_real_ip_from 23.191.200.27;
-set_real_ip_from 23.191.200.29;
 set_real_ip_from 23.191.200.3;
 set_real_ip_from 23.191.200.30;
 set_real_ip_from 23.191.200.31;
@@ -1068,7 +1066,6 @@ set_real_ip_from 2620:18c:0:192::e0:135;
 set_real_ip_from 2620:18c:0:192::e0:136;
 set_real_ip_from 2620:18c:0:192::e0:137;
 set_real_ip_from 2620:18c:0:192::e0:138;
-set_real_ip_from 2620:18c:0:192::e0:139;
 set_real_ip_from 2620:18c:0:192::e0:140;
 set_real_ip_from 2620:18c:0:192::e0:141;
 set_real_ip_from 2620:18c:0:192::e0:142;
@@ -1602,6 +1599,7 @@ set_real_ip_from 31.129.22.65;
 set_real_ip_from 31.133.0.210;
 set_real_ip_from 31.133.0.235;
 set_real_ip_from 31.184.236.104;
+set_real_ip_from 31.220.75.237;
 set_real_ip_from 31.40.204.206;
 set_real_ip_from 31.44.238.25;
 set_real_ip_from 35.0.127.52;
@@ -1630,7 +1628,6 @@ set_real_ip_from 38.135.25.142;
 set_real_ip_from 38.135.25.143;
 set_real_ip_from 38.135.25.144;
 set_real_ip_from 38.135.25.2;
-set_real_ip_from 38.242.254.131;
 set_real_ip_from 38.60.250.79;
 set_real_ip_from 38.97.116.242;
 set_real_ip_from 38.97.116.243;
