--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -20,6 +20,7 @@ set_real_ip_from 2001:41d0:801:2000::2b97;
 set_real_ip_from 2001:41d0:805:d300::2b19:1929;
 set_real_ip_from 2001:41d0:a:5c0::1;
 set_real_ip_from 2001:41d0:a:fe22::1;
+set_real_ip_from 2001:41d0:f00:5600::5ad6:7567;
 set_real_ip_from 2001:470:1:908::9001;
 set_real_ip_from 2001:470:1f06:2b4::2;
 set_real_ip_from 2001:4b20:12:f001::105;
@@ -230,7 +231,6 @@ set_real_ip_from 2620:18c:0:192::e0:135;
 set_real_ip_from 2620:18c:0:192::e0:136;
 set_real_ip_from 2620:18c:0:192::e0:137;
 set_real_ip_from 2620:18c:0:192::e0:138;
-set_real_ip_from 2620:18c:0:192::e0:139;
 set_real_ip_from 2620:18c:0:192::e0:140;
 set_real_ip_from 2620:18c:0:192::e0:141;
 set_real_ip_from 2620:18c:0:192::e0:142;
