Update lists at 20250914-2101

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -63,6 +63,7 @@ allow 107.189.30.69;
 allow 107.189.30.86;
 allow 107.189.3.11;
 allow 107.189.31.33;
+allow 107.189.31.52;
 allow 107.189.4.12;
 allow 107.189.4.209;
 allow 107.189.5.121;
@@ -622,6 +623,7 @@ allow 195.80.151.242;
 allow 195.88.74.206;
 allow 196.196.200.100;
 allow 196.251.84.71;
+allow 198.167.206.209;
 allow 198.251.84.163;
 allow 198.251.84.237;
 allow 198.251.88.18;
@@ -837,7 +839,6 @@ allow 23.129.64.166;
 allow 23.129.64.167;
 allow 23.129.64.168;
 allow 23.129.64.169;
-allow 23.129.64.170;
 allow 23.129.64.171;
 allow 23.129.64.172;
 allow 23.129.64.173;
@@ -846,7 +847,6 @@ allow 23.129.64.175;
 allow 23.129.64.176;
 allow 23.129.64.177;
 allow 23.129.64.178;
-allow 23.129.64.179;
 allow 23.129.64.180;
 allow 23.129.64.181;
 allow 23.129.64.182;
@@ -859,7 +859,6 @@ allow 23.129.64.188;
 allow 23.129.64.189;
 allow 23.129.64.190;
 allow 23.129.64.191;
-allow 23.129.64.192;
 allow 23.129.64.193;
 allow 23.129.64.194;
 allow 23.129.64.195;
@@ -920,10 +919,6 @@ allow 23.191.200.23;
 allow 23.191.200.24;
 allow 23.191.200.25;
 allow 23.191.200.26;
-allow 23.191.200.27;
-allow 23.191.200.29;
-allow 23.191.200.3;
-allow 23.191.200.30;
 allow 23.191.200.5;
 allow 23.191.200.6;
 allow 23.191.200.7;
@@ -949,7 +944,6 @@ allow 2.58.56.35;
 allow 2.58.56.43;
 allow 2.58.56.93;
 allow 2600:3c00::f03c:91ff:fe73:f9ba;
-allow 2600:3c00::f03c:91ff:fe96:1cd9;
 allow 2600:3c00::f03c:95ff:fe5d:8f00;
 allow 2600:3c03::f03c:95ff:fe5d:562;
 allow 2600:3c04::f03c:95ff:fe41:d42c;
@@ -1042,6 +1036,7 @@ allow 2605:6400:30:f858:2704:73e1:7085:12ef;
 allow 2605:6400:30:f8b5:620c:dc25:c624:aafd;
 allow 2605:6400:30:f8da:2b2:a293:30ad:506d;
 allow 2605:6400:30:f920:f523:28ef:3617:8b86;
+allow 2605:6400:30:fa41:69b1:324f:8ed4:8f76;
 allow 2605:6400:40:fe09::2;
 allow 2605:a140:2262:7686::1;
 allow 2605:a141:2261:4410::1;
@@ -1093,7 +1088,6 @@ allow 2620:18c:0:192::e0:166;
 allow 2620:18c:0:192::e0:167;
 allow 2620:18c:0:192::e0:168;
 allow 2620:18c:0:192::e0:169;
-allow 2620:18c:0:192::e0:170;
 allow 2620:18c:0:192::e0:171;
 allow 2620:18c:0:192::e0:172;
 allow 2620:18c:0:192::e0:173;
@@ -1102,7 +1096,6 @@ allow 2620:18c:0:192::e0:175;
 allow 2620:18c:0:192::e0:176;
 allow 2620:18c:0:192::e0:177;
 allow 2620:18c:0:192::e0:178;
-allow 2620:18c:0:192::e0:179;
 allow 2620:18c:0:192::e0:180;
 allow 2620:18c:0:192::e0:181;
 allow 2620:18c:0:192::e0:182;
@@ -1115,7 +1108,6 @@ allow 2620:18c:0:192::e0:188;
 allow 2620:18c:0:192::e0:189;
 allow 2620:18c:0:192::e0:190;
 allow 2620:18c:0:192::e0:191;
-allow 2620:18c:0:192::e0:192;
 allow 2620:18c:0:192::e0:193;
 allow 2620:18c:0:192::e0:194;
 allow 2620:18c:0:192::e0:195;
@@ -1158,7 +1150,6 @@ allow 2803:cd80:2000:10::db8f:5f60;
 allow 2a00:16b0:1:243::7012:3117;
 allow 2a00:16b0:1:243::7012:a500;
 allow 2a00:16b0:1:243::7012:e817;
-allow 2a00:1728:f:f:f:f:c03c:9898;
 allow 2a00:1b88:4::2;
 allow 2a00:1b88:4::4;
 allow 2a00:1dc0:caff:12c::4d3a;
@@ -1582,6 +1573,7 @@ allow 2a12:a800:9:1:193:26:115:140;
 allow 2a12:a800:9:1:193:26:115:43;
 allow 2a12:a800:9:1:193:26:115:61;
 allow 2a12:a800:9:1:193:26:115:82;
+allow 2a12:a800:9:1:45:83:31:79;
 allow 2a12:a800:9:1:45:88:186:89;
 allow 2a12:a800:9:1:45:88:186:92;
 allow 2a12:bec4:1821:3a6::a;
@@ -1698,6 +1690,7 @@ allow 45.80.158.69;
 allow 45.80.158.75;
 allow 45.80.158.93;
 allow 45.83.104.137;
+allow 45.83.31.79;
 allow 45.84.107.101;
 allow 45.84.107.128;
 allow 45.84.107.17;
@@ -1793,7 +1786,6 @@ allow 66.78.40.182;
 allow 66.94.111.228;
 allow 67.219.109.141;
 allow 71.19.144.106;
-allow 72.14.179.10;
 allow 72.211.49.235;
 allow 72.235.129.116;
 allow 72.5.43.62;
@@ -1848,7 +1840,6 @@ allow 87.118.116.90;
 allow 87.118.122.30;
 allow 87.118.122.51;
 allow 87.120.222.33;
-allow 87.120.254.132;
 allow 87.121.79.9;
 allow 88.151.192.2;
 allow 88.151.194.24;
