--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -114,7 +114,6 @@ set_real_ip_from 2407:3640:2207:8882::1;
 set_real_ip_from 2407:3640:2259:6302::1;
 set_real_ip_from 2407:3641:2259:8208::1;
 set_real_ip_from 2600:3c00::f03c:91ff:fe73:f9ba;
-set_real_ip_from 2600:3c00::f03c:91ff:fe96:1cd9;
 set_real_ip_from 2600:3c00::f03c:95ff:fe5d:8f00;
 set_real_ip_from 2600:3c03::f03c:95ff:fe5d:562;
 set_real_ip_from 2600:3c04::f03c:95ff:fe41:d42c;
@@ -207,6 +206,7 @@ set_real_ip_from 2605:6400:30:f858:2704:73e1:7085:12ef;
 set_real_ip_from 2605:6400:30:f8b5:620c:dc25:c624:aafd;
 set_real_ip_from 2605:6400:30:f8da:2b2:a293:30ad:506d;
 set_real_ip_from 2605:6400:30:f920:f523:28ef:3617:8b86;
+set_real_ip_from 2605:6400:30:fa41:69b1:324f:8ed4:8f76;
 set_real_ip_from 2605:6400:40:fe09::2;
 set_real_ip_from 2605:a140:2262:7686::1;
 set_real_ip_from 2605:a141:2261:4410::1;
@@ -258,7 +258,6 @@ set_real_ip_from 2620:18c:0:192::e0:166;
 set_real_ip_from 2620:18c:0:192::e0:167;
 set_real_ip_from 2620:18c:0:192::e0:168;
 set_real_ip_from 2620:18c:0:192::e0:169;
-set_real_ip_from 2620:18c:0:192::e0:170;
 set_real_ip_from 2620:18c:0:192::e0:171;
 set_real_ip_from 2620:18c:0:192::e0:172;
 set_real_ip_from 2620:18c:0:192::e0:173;
@@ -267,7 +266,6 @@ set_real_ip_from 2620:18c:0:192::e0:175;
 set_real_ip_from 2620:18c:0:192::e0:176;
 set_real_ip_from 2620:18c:0:192::e0:177;
 set_real_ip_from 2620:18c:0:192::e0:178;
-set_real_ip_from 2620:18c:0:192::e0:179;
 set_real_ip_from 2620:18c:0:192::e0:180;
 set_real_ip_from 2620:18c:0:192::e0:181;
 set_real_ip_from 2620:18c:0:192::e0:182;
@@ -280,7 +278,6 @@ set_real_ip_from 2620:18c:0:192::e0:188;
 set_real_ip_from 2620:18c:0:192::e0:189;
 set_real_ip_from 2620:18c:0:192::e0:190;
 set_real_ip_from 2620:18c:0:192::e0:191;
-set_real_ip_from 2620:18c:0:192::e0:192;
 set_real_ip_from 2620:18c:0:192::e0:193;
 set_real_ip_from 2620:18c:0:192::e0:194;
 set_real_ip_from 2620:18c:0:192::e0:195;
@@ -322,7 +319,6 @@ set_real_ip_from 2803:cd80:2000:10::db8f:5f60;
 set_real_ip_from 2a00:16b0:1:243::7012:3117;
 set_real_ip_from 2a00:16b0:1:243::7012:a500;
 set_real_ip_from 2a00:16b0:1:243::7012:e817;
-set_real_ip_from 2a00:1728:f:f:f:f:c03c:9898;
 set_real_ip_from 2a00:1b88:4::2;
 set_real_ip_from 2a00:1b88:4::4;
 set_real_ip_from 2a00:1dc0:caff:12c::4d3a;
@@ -746,6 +742,7 @@ set_real_ip_from 2a12:a800:9:1:193:26:115:140;
 set_real_ip_from 2a12:a800:9:1:193:26:115:43;
 set_real_ip_from 2a12:a800:9:1:193:26:115:61;
 set_real_ip_from 2a12:a800:9:1:193:26:115:82;
+set_real_ip_from 2a12:a800:9:1:45:83:31:79;
 set_real_ip_from 2a12:a800:9:1:45:88:186:89;
 set_real_ip_from 2a12:a800:9:1:45:88:186:92;
 set_real_ip_from 2a12:bec4:1821:3a6::a;
