Update lists at 20250915-0001

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -839,6 +839,7 @@ allow 23.129.64.166;
 allow 23.129.64.167;
 allow 23.129.64.168;
 allow 23.129.64.169;
+allow 23.129.64.170;
 allow 23.129.64.171;
 allow 23.129.64.172;
 allow 23.129.64.173;
@@ -847,6 +848,7 @@ allow 23.129.64.175;
 allow 23.129.64.176;
 allow 23.129.64.177;
 allow 23.129.64.178;
+allow 23.129.64.179;
 allow 23.129.64.180;
 allow 23.129.64.181;
 allow 23.129.64.182;
@@ -859,6 +861,7 @@ allow 23.129.64.188;
 allow 23.129.64.189;
 allow 23.129.64.190;
 allow 23.129.64.191;
+allow 23.129.64.192;
 allow 23.129.64.193;
 allow 23.129.64.194;
 allow 23.129.64.195;
@@ -912,6 +915,7 @@ allow 23.191.200.16;
 allow 23.191.200.17;
 allow 23.191.200.18;
 allow 23.191.200.19;
+allow 23.191.200.2;
 allow 23.191.200.20;
 allow 23.191.200.21;
 allow 23.191.200.22;
@@ -919,6 +923,13 @@ allow 23.191.200.23;
 allow 23.191.200.24;
 allow 23.191.200.25;
 allow 23.191.200.26;
+allow 23.191.200.27;
+allow 23.191.200.28;
+allow 23.191.200.29;
+allow 23.191.200.3;
+allow 23.191.200.30;
+allow 23.191.200.31;
+allow 23.191.200.4;
 allow 23.191.200.5;
 allow 23.191.200.6;
 allow 23.191.200.7;
@@ -944,6 +955,7 @@ allow 2.58.56.35;
 allow 2.58.56.43;
 allow 2.58.56.93;
 allow 2600:3c00::f03c:91ff:fe73:f9ba;
+allow 2600:3c00::f03c:91ff:fe96:1cd9;
 allow 2600:3c00::f03c:95ff:fe5d:8f00;
 allow 2600:3c03::f03c:95ff:fe5d:562;
 allow 2600:3c04::f03c:95ff:fe41:d42c;
@@ -1088,6 +1100,7 @@ allow 2620:18c:0:192::e0:166;
 allow 2620:18c:0:192::e0:167;
 allow 2620:18c:0:192::e0:168;
 allow 2620:18c:0:192::e0:169;
+allow 2620:18c:0:192::e0:170;
 allow 2620:18c:0:192::e0:171;
 allow 2620:18c:0:192::e0:172;
 allow 2620:18c:0:192::e0:173;
@@ -1096,6 +1109,7 @@ allow 2620:18c:0:192::e0:175;
 allow 2620:18c:0:192::e0:176;
 allow 2620:18c:0:192::e0:177;
 allow 2620:18c:0:192::e0:178;
+allow 2620:18c:0:192::e0:179;
 allow 2620:18c:0:192::e0:180;
 allow 2620:18c:0:192::e0:181;
 allow 2620:18c:0:192::e0:182;
@@ -1108,6 +1122,7 @@ allow 2620:18c:0:192::e0:188;
 allow 2620:18c:0:192::e0:189;
 allow 2620:18c:0:192::e0:190;
 allow 2620:18c:0:192::e0:191;
+allow 2620:18c:0:192::e0:192;
 allow 2620:18c:0:192::e0:193;
 allow 2620:18c:0:192::e0:194;
 allow 2620:18c:0:192::e0:195;
@@ -1786,6 +1801,7 @@ allow 66.78.40.182;
 allow 66.94.111.228;
 allow 67.219.109.141;
 allow 71.19.144.106;
+allow 72.14.179.10;
 allow 72.211.49.235;
 allow 72.235.129.116;
 allow 72.5.43.62;
@@ -1814,7 +1830,6 @@ allow 81.17.28.95;
 allow 82.118.248.205;
 allow 82.153.138.125;
 allow 82.153.138.241;
-allow 82.153.138.7;
 allow 82.221.128.191;
 allow 82.221.131.5;
 allow 82.221.131.71;
