--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -114,6 +114,7 @@ set_real_ip_from 2407:3640:2207:8882::1;
 set_real_ip_from 2407:3640:2259:6302::1;
 set_real_ip_from 2407:3641:2259:8208::1;
 set_real_ip_from 2600:3c00::f03c:91ff:fe73:f9ba;
+set_real_ip_from 2600:3c00::f03c:91ff:fe96:1cd9;
 set_real_ip_from 2600:3c00::f03c:95ff:fe5d:8f00;
 set_real_ip_from 2600:3c03::f03c:95ff:fe5d:562;
 set_real_ip_from 2600:3c04::f03c:95ff:fe41:d42c;
@@ -258,6 +259,7 @@ set_real_ip_from 2620:18c:0:192::e0:166;
 set_real_ip_from 2620:18c:0:192::e0:167;
 set_real_ip_from 2620:18c:0:192::e0:168;
 set_real_ip_from 2620:18c:0:192::e0:169;
+set_real_ip_from 2620:18c:0:192::e0:170;
 set_real_ip_from 2620:18c:0:192::e0:171;
 set_real_ip_from 2620:18c:0:192::e0:172;
 set_real_ip_from 2620:18c:0:192::e0:173;
@@ -266,6 +268,7 @@ set_real_ip_from 2620:18c:0:192::e0:175;
 set_real_ip_from 2620:18c:0:192::e0:176;
 set_real_ip_from 2620:18c:0:192::e0:177;
 set_real_ip_from 2620:18c:0:192::e0:178;
+set_real_ip_from 2620:18c:0:192::e0:179;
 set_real_ip_from 2620:18c:0:192::e0:180;
 set_real_ip_from 2620:18c:0:192::e0:181;
 set_real_ip_from 2620:18c:0:192::e0:182;
@@ -278,6 +281,7 @@ set_real_ip_from 2620:18c:0:192::e0:188;
 set_real_ip_from 2620:18c:0:192::e0:189;
 set_real_ip_from 2620:18c:0:192::e0:190;
 set_real_ip_from 2620:18c:0:192::e0:191;
+set_real_ip_from 2620:18c:0:192::e0:192;
 set_real_ip_from 2620:18c:0:192::e0:193;
 set_real_ip_from 2620:18c:0:192::e0:194;
 set_real_ip_from 2620:18c:0:192::e0:195;
