--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -114,6 +114,7 @@ allow 2407:3640:2207:8882::1;
 allow 2407:3640:2259:6302::1;
 allow 2407:3641:2259:8208::1;
 allow 2600:3c00::f03c:91ff:fe73:f9ba;
+allow 2600:3c00::f03c:91ff:fe96:1cd9;
 allow 2600:3c00::f03c:95ff:fe5d:8f00;
 allow 2600:3c03::f03c:95ff:fe5d:562;
 allow 2600:3c04::f03c:95ff:fe41:d42c;
@@ -258,6 +259,7 @@ allow 2620:18c:0:192::e0:166;
 allow 2620:18c:0:192::e0:167;
 allow 2620:18c:0:192::e0:168;
 allow 2620:18c:0:192::e0:169;
+allow 2620:18c:0:192::e0:170;
 allow 2620:18c:0:192::e0:171;
 allow 2620:18c:0:192::e0:172;
 allow 2620:18c:0:192::e0:173;
@@ -266,6 +268,7 @@ allow 2620:18c:0:192::e0:175;
 allow 2620:18c:0:192::e0:176;
 allow 2620:18c:0:192::e0:177;
 allow 2620:18c:0:192::e0:178;
+allow 2620:18c:0:192::e0:179;
 allow 2620:18c:0:192::e0:180;
 allow 2620:18c:0:192::e0:181;
 allow 2620:18c:0:192::e0:182;
@@ -278,6 +281,7 @@ allow 2620:18c:0:192::e0:188;
 allow 2620:18c:0:192::e0:189;
 allow 2620:18c:0:192::e0:190;
 allow 2620:18c:0:192::e0:191;
+allow 2620:18c:0:192::e0:192;
 allow 2620:18c:0:192::e0:193;
 allow 2620:18c:0:192::e0:194;
 allow 2620:18c:0:192::e0:195;
