--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -839,6 +839,7 @@ set_real_ip_from 23.129.64.166;
 set_real_ip_from 23.129.64.167;
 set_real_ip_from 23.129.64.168;
 set_real_ip_from 23.129.64.169;
+set_real_ip_from 23.129.64.170;
 set_real_ip_from 23.129.64.171;
 set_real_ip_from 23.129.64.172;
 set_real_ip_from 23.129.64.173;
@@ -847,6 +848,7 @@ set_real_ip_from 23.129.64.175;
 set_real_ip_from 23.129.64.176;
 set_real_ip_from 23.129.64.177;
 set_real_ip_from 23.129.64.178;
+set_real_ip_from 23.129.64.179;
 set_real_ip_from 23.129.64.180;
 set_real_ip_from 23.129.64.181;
 set_real_ip_from 23.129.64.182;
@@ -859,6 +861,7 @@ set_real_ip_from 23.129.64.188;
 set_real_ip_from 23.129.64.189;
 set_real_ip_from 23.129.64.190;
 set_real_ip_from 23.129.64.191;
+set_real_ip_from 23.129.64.192;
 set_real_ip_from 23.129.64.193;
 set_real_ip_from 23.129.64.194;
 set_real_ip_from 23.129.64.195;
@@ -912,6 +915,7 @@ set_real_ip_from 23.191.200.16;
 set_real_ip_from 23.191.200.17;
 set_real_ip_from 23.191.200.18;
 set_real_ip_from 23.191.200.19;
+set_real_ip_from 23.191.200.2;
 set_real_ip_from 23.191.200.20;
 set_real_ip_from 23.191.200.21;
 set_real_ip_from 23.191.200.22;
@@ -919,6 +923,13 @@ set_real_ip_from 23.191.200.23;
 set_real_ip_from 23.191.200.24;
 set_real_ip_from 23.191.200.25;
 set_real_ip_from 23.191.200.26;
+set_real_ip_from 23.191.200.27;
+set_real_ip_from 23.191.200.28;
+set_real_ip_from 23.191.200.29;
+set_real_ip_from 23.191.200.3;
+set_real_ip_from 23.191.200.30;
+set_real_ip_from 23.191.200.31;
+set_real_ip_from 23.191.200.4;
 set_real_ip_from 23.191.200.5;
 set_real_ip_from 23.191.200.6;
 set_real_ip_from 23.191.200.7;
@@ -944,6 +955,7 @@ set_real_ip_from 2.58.56.35;
 set_real_ip_from 2.58.56.43;
 set_real_ip_from 2.58.56.93;
 set_real_ip_from 2600:3c00::f03c:91ff:fe73:f9ba;
+set_real_ip_from 2600:3c00::f03c:91ff:fe96:1cd9;
 set_real_ip_from 2600:3c00::f03c:95ff:fe5d:8f00;
 set_real_ip_from 2600:3c03::f03c:95ff:fe5d:562;
 set_real_ip_from 2600:3c04::f03c:95ff:fe41:d42c;
@@ -1088,6 +1100,7 @@ set_real_ip_from 2620:18c:0:192::e0:166;
 set_real_ip_from 2620:18c:0:192::e0:167;
 set_real_ip_from 2620:18c:0:192::e0:168;
 set_real_ip_from 2620:18c:0:192::e0:169;
+set_real_ip_from 2620:18c:0:192::e0:170;
 set_real_ip_from 2620:18c:0:192::e0:171;
 set_real_ip_from 2620:18c:0:192::e0:172;
 set_real_ip_from 2620:18c:0:192::e0:173;
@@ -1096,6 +1109,7 @@ set_real_ip_from 2620:18c:0:192::e0:175;
 set_real_ip_from 2620:18c:0:192::e0:176;
 set_real_ip_from 2620:18c:0:192::e0:177;
 set_real_ip_from 2620:18c:0:192::e0:178;
+set_real_ip_from 2620:18c:0:192::e0:179;
 set_real_ip_from 2620:18c:0:192::e0:180;
 set_real_ip_from 2620:18c:0:192::e0:181;
 set_real_ip_from 2620:18c:0:192::e0:182;
@@ -1108,6 +1122,7 @@ set_real_ip_from 2620:18c:0:192::e0:188;
 set_real_ip_from 2620:18c:0:192::e0:189;
 set_real_ip_from 2620:18c:0:192::e0:190;
 set_real_ip_from 2620:18c:0:192::e0:191;
+set_real_ip_from 2620:18c:0:192::e0:192;
 set_real_ip_from 2620:18c:0:192::e0:193;
 set_real_ip_from 2620:18c:0:192::e0:194;
 set_real_ip_from 2620:18c:0:192::e0:195;
@@ -1786,6 +1801,7 @@ set_real_ip_from 66.78.40.182;
 set_real_ip_from 66.94.111.228;
 set_real_ip_from 67.219.109.141;
 set_real_ip_from 71.19.144.106;
+set_real_ip_from 72.14.179.10;
 set_real_ip_from 72.211.49.235;
 set_real_ip_from 72.235.129.116;
 set_real_ip_from 72.5.43.62;
@@ -1814,7 +1830,6 @@ set_real_ip_from 81.17.28.95;
 set_real_ip_from 82.118.248.205;
 set_real_ip_from 82.153.138.125;
 set_real_ip_from 82.153.138.241;
-set_real_ip_from 82.153.138.7;
 set_real_ip_from 82.221.128.191;
 set_real_ip_from 82.221.131.5;
 set_real_ip_from 82.221.131.71;
