--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -1236,6 +1236,7 @@ deny 2a04:52c0:103:5acd::1;
 deny 2a04:52c0:104:31e6::1;
 deny 2a04:52c0:104:4735::1;
 deny 2a04:52c0:104:ad97::1;
+deny 2a04:52c0:105:d7eb::1;
 deny 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 deny 2a04:52c0:106:d219::1;
 deny 2a04:52c0:108:a34f::1;
@@ -1596,13 +1597,13 @@ deny 2a12:bec4:1821:3a7::a;
 deny 2a12:bec4:1821:3a8::a;
 deny 2a12:de40:21:1be4::;
 deny 2a14:1ec7:1000:a633::1;
-deny 2a14:7583:f607::;
 deny 2c0f:6c0:0:2::6983;
 deny 2c0f:6c0:0:d::d28b;
 deny 31.129.22.65;
 deny 31.133.0.210;
 deny 31.133.0.235;
 deny 31.184.236.104;
+deny 31.220.75.237;
 deny 31.40.204.206;
 deny 31.44.238.25;
 deny 35.0.127.52;
@@ -1631,14 +1632,12 @@ deny 38.135.25.142;
 deny 38.135.25.143;
 deny 38.135.25.144;
 deny 38.135.25.2;
-deny 38.242.254.131;
 deny 38.60.250.79;
 deny 38.97.116.242;
 deny 38.97.116.243;
 deny 38.97.116.244;
 deny 38.97.116.245;
 deny 43.160.194.14;
-deny 44.30.4.69;
 deny 45.11.59.28;
 deny 45.12.3.80;
 deny 45.128.133.242;
@@ -1756,6 +1755,7 @@ deny 51.89.138.51;
 deny 51.91.18.151;
 deny 5.196.95.34;
 deny 5.253.247.27;
+deny 5.255.100.26;
 deny 5.255.101.10;
 deny 5.255.101.131;
 deny 5.255.103.235;
@@ -1865,6 +1865,7 @@ deny 88.80.26.4;
 deny 89.147.108.90;
 deny 89.147.110.118;
 deny 89.147.110.154;
+deny 89.147.110.211;
 deny 89.147.110.82;
 deny 89.147.111.87;
 deny 89.234.157.254;
