--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -394,6 +394,7 @@ allow 2a04:52c0:103:5acd::1;
 allow 2a04:52c0:104:31e6::1;
 allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
+allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 allow 2a04:52c0:106:d219::1;
 allow 2a04:52c0:108:a34f::1;
@@ -754,6 +755,5 @@ allow 2a12:bec4:1821:3a7::a;
 allow 2a12:bec4:1821:3a8::a;
 allow 2a12:de40:21:1be4::;
 allow 2a14:1ec7:1000:a633::1;
-allow 2a14:7583:f607::;
 allow 2c0f:6c0:0:2::6983;
 allow 2c0f:6c0:0:d::d28b;
