--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -207,14 +207,12 @@ allow 176.65.149.84;
 allow 176.65.149.87;
 allow 176.65.149.88;
 allow 176.65.149.96;
-allow 176.65.151.192;
 allow 176.65.151.193;
 allow 176.65.151.194;
 allow 176.9.3.9;
 allow 176.97.114.202;
 allow 177.93.140.66;
 allow 178.162.175.5;
-allow 178.17.170.144;
 allow 178.17.170.23;
 allow 178.17.171.102;
 allow 178.17.174.164;
@@ -228,7 +226,6 @@ allow 178.218.144.51;
 allow 178.218.144.64;
 allow 178.218.144.96;
 allow 178.218.144.99;
-allow 179.250.80.161;
 allow 179.43.128.16;
 allow 179.43.159.194;
 allow 179.43.159.195;
@@ -624,7 +621,7 @@ allow 195.80.151.242;
 allow 195.88.74.206;
 allow 196.196.200.100;
 allow 196.251.84.71;
-allow 198.167.206.209;
+allow 198.167.206.179;
 allow 198.251.84.163;
 allow 198.251.84.237;
 allow 198.251.88.18;
@@ -918,6 +915,7 @@ allow 23.191.200.16;
 allow 23.191.200.17;
 allow 23.191.200.18;
 allow 23.191.200.19;
+allow 23.191.200.2;
 allow 23.191.200.20;
 allow 23.191.200.21;
 allow 23.191.200.22;
@@ -925,6 +923,7 @@ allow 23.191.200.23;
 allow 23.191.200.24;
 allow 23.191.200.25;
 allow 23.191.200.26;
+allow 23.191.200.27;
 allow 23.191.200.29;
 allow 23.191.200.3;
 allow 23.191.200.30;
@@ -1166,12 +1165,12 @@ allow 2803:cd80:2000:10::db8f:5f60;
 allow 2a00:16b0:1:243::7012:3117;
 allow 2a00:16b0:1:243::7012:a500;
 allow 2a00:16b0:1:243::7012:e817;
+allow 2a00:1728:f:f:f:f:c03c:9898;
 allow 2a00:1b88:4::2;
 allow 2a00:1b88:4::4;
 allow 2a00:1dc0:caff:12c::4d3a;
 allow 2a00:1dc0:caff:138::94d2;
 allow 2a00:1dc0:caff:15::45dc;
-allow 2a00:1dc0:caff:44::326d;
 allow 2a00:1dc0:caff:73::a568;
 allow 2a00:74a0:e000:1003::114;
 allow 2a00:99a0:0:1000::2;
@@ -1673,6 +1672,7 @@ allow 45.141.215.17;
 allow 45.141.215.19;
 allow 45.141.215.200;
 allow 45.141.215.21;
+allow 45.141.215.233;
 allow 45.141.215.238;
 allow 45.141.215.28;
 allow 45.141.215.40;
@@ -1858,6 +1858,7 @@ allow 87.118.116.90;
 allow 87.118.122.30;
 allow 87.118.122.51;
 allow 87.120.222.33;
+allow 87.120.254.132;
 allow 87.121.79.9;
 allow 88.151.192.2;
 allow 88.151.194.24;
