--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -9,6 +9,7 @@ allow 103.164.54.199;
 allow 103.193.179.233;
 allow 103.196.37.111;
 allow 103.20.241.102;
+allow 103.209.42.137;
 allow 103.251.167.10;
 allow 103.253.24.18;
 allow 103.28.52.93;
@@ -207,12 +208,14 @@ allow 176.65.149.84;
 allow 176.65.149.87;
 allow 176.65.149.88;
 allow 176.65.149.96;
+allow 176.65.151.192;
 allow 176.65.151.193;
 allow 176.65.151.194;
 allow 176.9.3.9;
 allow 176.97.114.202;
 allow 177.93.140.66;
 allow 178.162.175.5;
+allow 178.17.170.144;
 allow 178.17.170.23;
 allow 178.17.171.102;
 allow 178.17.174.164;
@@ -286,9 +289,6 @@ allow 185.177.238.26;
 allow 185.177.238.9;
 allow 185.183.157.214;
 allow 185.183.159.40;
-allow 185.191.127.110;
-allow 185.191.127.112;
-allow 185.191.127.113;
 allow 185.191.204.254;
 allow 185.191.239.158;
 allow 185.191.239.49;
@@ -923,11 +923,10 @@ allow 23.191.200.23;
 allow 23.191.200.24;
 allow 23.191.200.25;
 allow 23.191.200.26;
-allow 23.191.200.27;
+allow 23.191.200.28;
 allow 23.191.200.29;
 allow 23.191.200.3;
 allow 23.191.200.30;
-allow 23.191.200.31;
 allow 23.191.200.4;
 allow 23.191.200.5;
 allow 23.191.200.6;
@@ -1171,6 +1170,7 @@ allow 2a00:1b88:4::4;
 allow 2a00:1dc0:caff:12c::4d3a;
 allow 2a00:1dc0:caff:138::94d2;
 allow 2a00:1dc0:caff:15::45dc;
+allow 2a00:1dc0:caff:44::326d;
 allow 2a00:1dc0:caff:73::a568;
 allow 2a00:74a0:e000:1003::114;
 allow 2a00:99a0:0:1000::2;
@@ -1603,6 +1603,7 @@ allow 31.129.22.65;
 allow 31.133.0.210;
 allow 31.133.0.235;
 allow 31.184.236.104;
+allow 31.220.75.237;
 allow 31.40.204.206;
 allow 31.44.238.25;
 allow 35.0.127.52;
@@ -1631,7 +1632,6 @@ allow 38.135.25.142;
 allow 38.135.25.143;
 allow 38.135.25.144;
 allow 38.135.25.2;
-allow 38.242.254.131;
 allow 38.60.250.79;
 allow 38.97.116.242;
 allow 38.97.116.243;
@@ -1735,9 +1735,7 @@ allow 45.95.169.104;
 allow 45.95.169.109;
 allow 45.95.169.110;
 allow 45.95.169.252;
-allow 46.165.193.215;
 allow 46.165.243.36;
-allow 46.183.217.239;
 allow 46.232.251.191;
 allow 46.234.47.105;
 allow 46.250.243.29;
@@ -1889,7 +1887,6 @@ allow 91.208.75.239;
 allow 91.208.75.3;
 allow 91.208.75.4;
 allow 91.219.236.101;
-allow 91.219.238.161;
 allow 91.227.114.153;
 allow 91.92.109.126;
 allow 91.92.109.43;
