--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -197,8 +197,8 @@ allow 173.237.206.68;
 allow 173.255.198.243;
 allow 176.118.193.33;
 allow 176.121.81.51;
-allow 176.58.100.98;
 allow 176.58.121.177;
+allow 176.58.89.182;
 allow 176.65.134.4;
 allow 176.65.148.133;
 allow 176.65.148.3;
@@ -596,7 +596,6 @@ allow 194.15.36.117;
 allow 194.163.157.49;
 allow 194.26.192.177;
 allow 194.26.192.77;
-allow 194.42.196.35;
 allow 194.53.137.102;
 allow 194.87.55.98;
 allow 195.160.220.104;
@@ -621,7 +620,7 @@ allow 195.80.151.242;
 allow 195.88.74.206;
 allow 196.196.200.100;
 allow 196.251.84.71;
-allow 198.167.206.179;
+allow 198.167.206.209;
 allow 198.251.84.163;
 allow 198.251.84.237;
 allow 198.251.88.18;
@@ -717,6 +716,9 @@ allow 2001:67c:89c:702:1ce:1ce:babe:6;
 allow 2001:67c:89c:702:1ce:1ce:babe:7;
 allow 2001:67c:89c:702:1ce:1ce:babe:8;
 allow 2001:67c:89c:702:1ce:1ce:babe:9;
+allow 2001:67c:e28:1::2;
+allow 2001:67c:e28:1::3;
+allow 2001:67c:e28:1::4;
 allow 2001:67c:e60:c0c:192:42:116:191;
 allow 2001:67c:e60:c0c:192:42:116:192;
 allow 2001:67c:e60:c0c:192:42:116:193;
@@ -922,7 +924,9 @@ allow 23.191.200.24;
 allow 23.191.200.25;
 allow 23.191.200.26;
 allow 23.191.200.27;
-allow 23.191.200.3;
+allow 23.191.200.28;
+allow 23.191.200.30;
+allow 23.191.200.31;
 allow 23.191.200.4;
 allow 23.191.200.5;
 allow 23.191.200.6;
@@ -1177,7 +1181,6 @@ allow 2a01:4f8:141:3305::2;
 allow 2a01:5e0:36:c311::1;
 allow 2a01:5e0:36:cf2a::1;
 allow 2a01:6340:2:501::10;
-allow 2a01:7e00::f03c:91ff:fe56:2656;
 allow 2a01:7e00::f03c:91ff:fe78:b382;
 allow 2a02:16d0:0:5::1;
 allow 2a02:418:6017::147;
@@ -1497,8 +1500,6 @@ allow 2a0f:85c1:356:231b::1;
 allow 2a0f:85c1:356:3238::1;
 allow 2a0f:85c1:356:5a46::1;
 allow 2a0f:85c1:356:5c50::1;
-allow 2a0f:ca80:619:c3b8::1;
-allow 2a0f:ca80:619:e915::1;
 allow 2a0f:cdc6:500:11e3::2;
 allow 2a0f:df00:0:255::194;
 allow 2a0f:df00:0:255::195;
@@ -1640,8 +1641,6 @@ allow 44.30.4.69;
 allow 45.11.59.28;
 allow 45.12.3.80;
 allow 45.128.133.242;
-allow 45.129.13.52;
-allow 45.129.13.57;
 allow 45.132.246.245;
 allow 45.13.225.69;
 allow 45.13.225.78;
@@ -1670,7 +1669,6 @@ allow 45.141.215.17;
 allow 45.141.215.19;
 allow 45.141.215.200;
 allow 45.141.215.21;
-allow 45.141.215.233;
 allow 45.141.215.238;
 allow 45.141.215.28;
 allow 45.141.215.40;
@@ -1791,6 +1789,9 @@ allow 62.171.137.169;
 allow 62.182.84.146;
 allow 62.72.47.105;
 allow 64.190.113.221;
+allow 64.190.76.2;
+allow 64.190.76.3;
+allow 64.190.76.4;
 allow 64.94.85.248;
 allow 65.87.7.198;
 allow 66.146.193.33;
