--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -141,7 +141,6 @@ deny 151.243.213.150;
 deny 152.32.206.127;
 deny 152.53.106.19;
 deny 152.53.184.161;
-deny 152.53.210.165;
 deny 152.53.53.243;
 deny 154.16.116.61;
 deny 154.205.129.174;
@@ -599,7 +598,6 @@ deny 194.15.36.117;
 deny 194.163.157.49;
 deny 194.26.192.177;
 deny 194.26.192.77;
-deny 194.53.137.102;
 deny 194.87.55.98;
 deny 195.160.220.104;
 deny 195.176.3.23;
@@ -900,6 +898,7 @@ deny 23.129.64.222;
 deny 23.129.64.223;
 deny 23.129.64.224;
 deny 23.129.64.225;
+deny 23.129.64.99;
 deny 23.137.248.100;
 deny 23.137.253.113;
 deny 23.137.253.254;
@@ -919,7 +918,6 @@ deny 23.191.200.16;
 deny 23.191.200.17;
 deny 23.191.200.18;
 deny 23.191.200.19;
-deny 23.191.200.2;
 deny 23.191.200.20;
 deny 23.191.200.21;
 deny 23.191.200.22;
@@ -928,11 +926,9 @@ deny 23.191.200.24;
 deny 23.191.200.25;
 deny 23.191.200.26;
 deny 23.191.200.27;
-deny 23.191.200.28;
+deny 23.191.200.3;
 deny 23.191.200.31;
-deny 23.191.200.4;
 deny 23.191.200.5;
-deny 23.191.200.6;
 deny 23.191.200.7;
 deny 23.191.200.8;
 deny 23.191.200.9;
@@ -1061,6 +1057,7 @@ deny 2607:5300:205:200::4894;
 deny 2607:f530:9002::19;
 deny 2607:fa18:3:beef:f001:c0de:feed:ba5e;
 deny 2610:150:4001:a120:216:3cff:fe4a:e2a9;
+deny 2620:18c:0:192::99;
 deny 2620:18c:0:192::e0:130;
 deny 2620:18c:0:192::e0:131;
 deny 2620:18c:0:192::e0:132;
@@ -1282,7 +1279,6 @@ deny 2a09:61c0::20;
 deny 2a09:61c0::21;
 deny 2a09:61c0::22;
 deny 2a09:61c0::beef;
-deny 2a0a:4cc0:2000:cd4c::12;
 deny 2a0a:4cc0:40:91b:7425:2eff:fec8:5578;
 deny 2a0a:4cc0:c1:12a1:58f9:e7ff:fe0b:b0f1;
 deny 2a0b:f4c0:16c:10::1;
@@ -1464,7 +1460,6 @@ deny 2a0d:bbc7::f816:3eff:fee9:3e45;
 deny 2a0d:bbc7::f816:3eff:feec:9f18;
 deny 2a0d:bbc7::f816:3eff:fef2:6521;
 deny 2a0d:c2c0:1:4::2;
-deny 2a0e:1d80:13:b6d5::1;
 deny 2a0e:4005:1002:ffff:185:40:4:100;
 deny 2a0e:4005:1002:ffff:185:40:4:101;
 deny 2a0e:4005:1002:ffff:185:40:4:127;
@@ -1888,6 +1883,7 @@ deny 91.208.75.239;
 deny 91.208.75.3;
 deny 91.208.75.4;
 deny 91.219.236.101;
+deny 91.219.237.26;
 deny 91.219.237.39;
 deny 91.227.114.153;
 deny 91.92.109.126;
